fix: read welcome.txt FileSystemNotFound error